@@ -29,7 +29,7 @@ improvements or extensions that  they  make,  and  to  grant  Carnegie
 Mellon the rights to redistribute these changes without encumbrance.
 */
 
-static char *rcsid = "$Header: /afs/cs/project/coda-src/cvs/coda/coda-src/vicedep/vice.rpc2,v 4.1 1997/01/08 21:52:06 rvb Exp $";
+static char *rcsid = "$Header: /afs/cs/project/coda-src/cvs/coda/coda-src/vicedep/vice.rpc2,v 4.2 1998/04/14 21:02:29 braam Exp $";
 #endif /*_BLURB_*/
 
 /*
